# bert-finetuning-catalyst

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  pyproject.toml  requirements.txt
data/output/: pred.txt
data/sdg_classification/: eval_set_sdg_1_7_8_12_13_curated_journals_toy.csv  train_set_sdg_1_7_8_12_13_toy.csv  val_set_sdg_1_7_8_12_13_toy.csv
logdir/: log.txt
logdir/_base_log/: events.out.tfevents.1606431180.ELSAMSM-400372.73766.0  events.out.tfevents.1608737343.ELSAMSM-400372.73564.0  events.out.tfevents.1608737871.ELSAMSM-400372.74049.0  events.out.tfevents.1609056143.ELSAMSM-400372.20093.24  events.out.tfevents.1645566344.dhcp-10-101-67-200.wireless.northwestern.private.2879.0  events.out.tfevents.1645566417.dhcp-10-101-67-200.wireless.northwestern.private.2923.0  events.out.tfevents.1645567649.dhcp-10-101-67-200.wireless.northwestern.private.3559.0  events.out.tfevents.1645571046.dhcp-10-101-67-200.wireless.northwestern.private.4512.0  events.out.tfevents.1646150422.Joshs-MacBook-Pro.local.6682.0
logdir/train_log/: events.out.tfevents.1606431180.ELSAMSM-400372.73766.1  events.out.tfevents.1608737343.ELSAMSM-400372.73564.1  events.out.tfevents.1608737871.ELSAMSM-400372.74049.1  events.out.tfevents.1609056143.ELSAMSM-400372.20093.25  events.out.tfevents.1645566344.dhcp-10-101-67-200.wireless.northwestern.private.2879.1  (+4 more)
src/: BERT model.ipynb  Convert JSON to CSV.ipynb  Predicting using BERT.ipynb  data.py  load_model.py  model.py  motions and orders.ipynb  sandbox.ipynb  train.py
(+8 files in other folders)
